--- a/public/index.html
+++ b/public/index.html
@@ -27,12 +27,18 @@
     -->
     <style>
       #myVideo {
-        position: fixed;
-        right: 0;
-        bottom: 0;
-        min-width: 100%;
-        height: 100%;
-        z-index: -1;
+        display: none;
+      }
+      @media (min-width: 992px) {
+        #myVideo {
+          display: block;
+          position: fixed;
+          right: 0;
+          bottom: 0;
+          min-width: 100%;
+          height: 100%;
+          z-index: -1;
+        }
       }
     </style>
     <title>React App</title>
